--- a/BreakingBad/Flows/CharacterList/Cells/CharactersListCell.xib
+++ b/BreakingBad/Flows/CharacterList/Cells/CharactersListCell.xib
@@ -10,33 +10,38 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UserListCell" customModule="BreakingBad" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CharactersListCell" customModule="BreakingBad" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="629" height="162"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hY8-af-4It">
-                    <rect key="frame" x="16" y="4" width="609" height="154"/>
+                    <rect key="frame" x="16" y="5" width="597" height="152"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u0u-jZ-fvM">
-                            <rect key="frame" x="8" y="8" width="593" height="138"/>
+                            <rect key="frame" x="8" y="12" width="581" height="128"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WTO-bR-N4T">
-                                    <rect key="frame" x="0.0" y="0.0" width="138" height="138"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WTO-bR-N4T">
+                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="WTO-bR-N4T" secondAttribute="height" multiplier="1:1" id="6gd-7c-Hk0"/>
                                     </constraints>
                                 </imageView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cnd-FS-AUH">
-                                    <rect key="frame" x="138" y="0.0" width="455" height="138"/>
+                                    <rect key="frame" x="128" y="0.0" width="453" height="128"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gea-Mq-fO0">
-                                            <rect key="frame" x="8" y="59" width="439" height="20.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gea-Mq-fO0">
+                                            <rect key="frame" x="8" y="55.5" width="437" height="17.5"/>
+                                            <attributedString key="attributedText">
+                                                <fragment content="Label">
+                                                    <attributes>
+                                                        <font key="NSFont" size="15" name="SFCompactDisplay-Bold"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="gea-Mq-fO0" secondAttribute="trailing" constant="8" id="0l1-Ad-9bo"/>
                                         <constraint firstItem="gea-Mq-fO0" firstAttribute="centerY" secondItem="Cnd-FS-AUH" secondAttribute="centerY" id="Fen-jP-ygM"/>
@@ -48,8 +53,8 @@
                     </subviews>
                     <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="u0u-jZ-fvM" secondAttribute="bottom" constant="8" id="Ac8-6N-c1H"/>
-                        <constraint firstItem="u0u-jZ-fvM" firstAttribute="top" secondItem="hY8-af-4It" secondAttribute="top" constant="8" id="VuV-kw-Rbo"/>
+                        <constraint firstAttribute="bottom" secondItem="u0u-jZ-fvM" secondAttribute="bottom" constant="12" id="Ac8-6N-c1H"/>
+                        <constraint firstItem="u0u-jZ-fvM" firstAttribute="top" secondItem="hY8-af-4It" secondAttribute="top" constant="12" id="VuV-kw-Rbo"/>
                         <constraint firstAttribute="trailing" secondItem="u0u-jZ-fvM" secondAttribute="trailing" constant="8" id="qtj-ie-P0P"/>
                         <constraint firstItem="u0u-jZ-fvM" firstAttribute="leading" secondItem="hY8-af-4It" secondAttribute="leading" constant="8" id="tcz-Er-7ee"/>
                     </constraints>
@@ -58,13 +63,14 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="hY8-af-4It" secondAttribute="trailing" constant="4" id="Xr9-RN-vZG"/>
-                <constraint firstAttribute="bottom" secondItem="hY8-af-4It" secondAttribute="bottom" constant="4" id="YSW-Gj-Vkq"/>
-                <constraint firstItem="hY8-af-4It" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="4" id="bKo-bZ-2ZP"/>
+                <constraint firstAttribute="trailing" secondItem="hY8-af-4It" secondAttribute="trailing" constant="16" id="Xr9-RN-vZG"/>
+                <constraint firstAttribute="bottom" secondItem="hY8-af-4It" secondAttribute="bottom" constant="5" id="YSW-Gj-Vkq"/>
+                <constraint firstItem="hY8-af-4It" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="bKo-bZ-2ZP"/>
                 <constraint firstItem="hY8-af-4It" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="uvb-np-0ab"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="containerView" destination="hY8-af-4It" id="6A4-lh-gCO"/>
                 <outlet property="nameLabel" destination="gea-Mq-fO0" id="TTz-VU-hr5"/>
                 <outlet property="thumbnailImageView" destination="WTO-bR-N4T" id="nZB-Hf-zok"/>
             </connections>
